[project]
name = "cog-core"
version = "1.0.0"
description = "Semantic code search engine using Nomic embeddings on Apple Silicon MLX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "mlx>=0.30.3",
    "mlx-embedding-models>=0.0.11",
    "mlx-lm>=0.29.1",
    "sentence-transformers>=5.2.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-language-pack>=0.13.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "lancedb>=0.26.1",
]
